<resources>
    <string name="app_name">MyRabbitHole</string>
    <string name="my_rabbi_hole">My Rabbit Hole</string>
    <string name="idols_name">Idol Name :</string>
    <string name="detail">Detail</string>
    <string name="list">List</string>
    <string name="with_cardview">with CardView</string>
    <string name="grid">Grid</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="demo">Demo</string>
    <string name="back_button">Back Button</string>
    <string name="personality">Personality</string>
    <string name="social_media">Social Media</string>
    <string name="stream_channel">Stream Channel</string>
    <string name="subscriber_count">Subscriber Count</string>
    <string name="banner">Banner</string>
    <string name="TextTesting">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lacus luctus accumsan tortor posuere ac ut. Nibh mauris cursus mattis molestie a iaculis at. Dolor purus non enim praesent elementum facilisis leo. Cursus turpis massa tincidunt dui ut ornare lectus sit. Magna fringilla urna porttitor rhoncus dolor purus non enim. Fringilla ut morbi tincidunt augue. Suspendisse potenti nullam ac tortor vitae purus. Dignissim suspendisse in est ante in nibh mauris cursus mattis. Eu augue ut lectus arcu bibendum at varius vel pharetra. Est pellentesque elit ullamcorper dignissim cras tincidunt. Malesuada fames ac turpis egestas. Tincidunt praesent semper feugiat nibh sed pulvinar. In ornare quam viverra orci sagittis eu. Integer enim neque volutpat ac tincidunt vitae semper. Penatibus et magnis dis parturient montes nascetur ridiculus mus mauris. Mi quis hendrerit dolor magna eget est lorem ipsum. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Sed adipiscing diam donec adipiscing tristique risus nec. Maecenas ultricies mi eget mauris pharetra et ultrices neque. Etiam dignissim diam quis enim lobortis scelerisque fermentum. Pulvinar mattis nunc sed blandit libero volutpat. Eu augue ut lectus arcu. Leo integer malesuada nunc vel risus commodo viverra maecenas. Libero enim sed faucibus turpis in eu. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Elit sed vulputate mi sit amet mauris commodo quis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. Viverra orci sagittis eu volutpat odio facilisis mauris. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Metus aliquam eleifend mi in nulla. Orci a scelerisque purus semper. Nam aliquam sem et tortor consequat id porta nibh venenatis. Curabitur gravida arcu ac tortor dignissim convallis. Non sodales neque sodales ut etiam sit amet nisl purus. Lectus magna fringilla urna porttitor rhoncus dolor.</string>
    <string name="my_email">Kemal48.ilyasa@gmail.com</string>
    <string name="my_name">Muhammad Kemal Ilyasa Margana</string>
    <string name="hololive_logo">hololive logo</string>
</resources>